create get apis for employees